fixed urls and sesion target type handling

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -46,12 +46,12 @@ version = 1
 ###
 ## session target section - where does the session connect to
 
-# this section holds the target information of the session
-[session.target]
-# host of the session endpoint without schema
-host = "127.0.0.1"
-# port of the session endpoint
-port = 51820
+# # this section holds the target information of the session
+# [session.target]
+# # # [OPTIONAL] host of the session endpoint without schema, defaults to localhost wg endpoint
+# # host = "127.0.0.1"
+# # # [OPTIONAL] port of the session endpoint, defaults to default wg port
+# # port = 51820
 
 ###
 ## wireguard section - specific VPN related settings
