Fix close handling (#32)
* simplified session target handling to make it work

* fixed example onboarding commands

* fixed urls and sesion target type handling

* better error handling

* treating target as string

* handling ctrlc to initiate gracefull shuthown

* gracefully closing session on ctrlc

* better handling logs

* better pathing logs

* following clippys suggestions

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -48,10 +48,10 @@ version = 1
 
 # # this section holds the target information of the session
 # [session.target]
-# # host of the session endpoint without schema
-# host = "mysession.wireguard.endpoint"
-# # port of the session endpoint
-# port = 51820
+# # # [OPTIONAL] host of the session endpoint without schema, defaults to localhost wg endpoint
+# # host = "127.0.0.1"
+# # # [OPTIONAL] port of the session endpoint, defaults to default wg port
+# # port = 51820
 
 ###
 ## wireguard section - specific VPN related settings
