moved sample config to documented config

--- a/documented-config.toml
+++ b/documented-config.toml
@@ -10,7 +10,7 @@ version = 1
 
 ###
 ## hoprd node section - your hoprd node that acts as the connection entry point
-# [hoprd node]
+# [hoprd_node]
 
 # # URL pointing to API access of your node with schema and port (e.g.: `http://123.456.7.89:3002`)
 # endpoint = "<hoprd node API endpoint>"
@@ -22,7 +22,7 @@ version = 1
 # # # this is NOT your API port which must be specified in the `endpoint` field
 # # # this port is an addiontal port used to establish the tunnel connection on your hoprd node
 # # # in general if you want to establish a connection on specific port, just provide this port here
-# # internal_port = 60006
+# # internal_connection_port = 60006
 
 ###
 ## connection section - connection configuration parameters
@@ -32,8 +32,8 @@ version = 1
 # # the exit peer id (where the connection should terminate)
 # destination = "<exit node peer id>"
 
-# # # [OPTIONAL] internal connection features - defaults to `[ Segmentation ]`
-# # capabilities = [ "Segmentation", "Retransmission" ]
+# # # [OPTIONAL] internal connection features - defaults to `[ "segmentation" ]`
+# # capabilities = [ "segmentation", "retransmission" ]
 # # # [OPTIONAL] listen host - specify internal listen host on hoprd node
 # # # if you have a firewall running and can only use static ports you need to adjust this setting
 # # # it's best to only use `internal_port` of `[hoprd node]` section - if listen_host is enabled `internal_port` is ignored
@@ -69,12 +69,12 @@ version = 1
 # # local interface IP, onboarding info will provide this
 # address = "10.34.0.8/32"
 # # wireguard server public peer id - onboarding info will provide this
-# serverPublicKey = "<wg server public peer id>"
+# server_public_key = "<wg server public peer id>"
 
 # # # [OPTIONAL] determine which traffic will be routed through the VPN
 # # # defaults to the smallest subnet derivable from subnet (`x.x.x.0/24`)
-# # allowedIPs = "10.34.0.0/24"
+# # allowed_ips = "10.34.0.0/24"
 # # # [OPTIONAL] private wg key - set this if you want to skip automatic key generation and provide your own private key
-# # privateKey = "<wg private key>"
+# # private_key = "<wg private key>"
 # # # [OPTIONAL] preshared server key - if the server provides this, set it here
-# # presharedKey = "<wg preshared key>"
+# # preshared_key = "<wg preshared key>"
