--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -29,8 +29,8 @@ jobs:
           pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
           echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
           gcloud config set artifacts/location europe-west3
-          gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis-vpn ${pr_version}  2> /dev/null || true
-          gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis-vpn ${pr_version}  2> /dev/null || true
+          gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis_vpn ${pr_version}  2> /dev/null || true
+          gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis_vpn ${pr_version}  2> /dev/null || true
   build-binaries:
     strategy:
       matrix:
@@ -77,18 +77,18 @@ jobs:
             The binaries for this PR can be downloaded from:
             ```
             mkdir ./binaries
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-aarch64-linux
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --destination=./binaries --local-filename=gnosis-vpn-ctl-aarch64-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-aarch64-linux --destination=./binaries --local-filename=gnosis_vpn-aarch64-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-ctl-aarch64-linux --destination=./binaries --local-filename=gnosis_vpn-ctl-aarch64-linux
 
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --destination=./binaries --local-filename=gnosis-vpn-x86_64-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-x86_64-linux --destination=./binaries --local-filename=gnosis_vpn-x86_64-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-ctl-x86_64-linux --destination=./binaries --local-filename=gnosis_vpn-x86_64-linux
 
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --destination=./binaries --local-filename=gnosis-vpn-armv7l-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-armv7l-linux --destination=./binaries --local-filename=gnosis_vpn-armv7l-linux
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-ctl-armv7l-linux --destination=./binaries --local-filename=gnosis_vpn-armv7l-linux
 
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --destination=./binaries --local-filename=gnosis-vpn-aarch64-darwin
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-aarch64-darwin --destination=./binaries --local-filename=gnosis_vpn-aarch64-darwin
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-ctl-aarch64-darwin --destination=./binaries --local-filename=gnosis_vpn-aarch64-darwin
 
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
-            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.vars.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --destination=./binaries --local-filename=gnosis-vpn-x86_64-darwin
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-x86_64-darwin --destination=./binaries --local-filename=gnosis_vpn-x86_64-darwin
+            gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.vars.outputs.pr_version }}:gnosis_vpn-ctl-x86_64-darwin --destination=./binaries --local-filename=gnosis_vpn-x86_64-darwin
             ```
