fixed cachix ref

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Use Nix Cache
         uses: cachix/cachix-action@v15
         with:
-          name: gnosis_vpn-client
+          name: gnosis-vpn-client
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
           USER: runner
