--- a/gnosis_vpn-ctl/Cargo.toml
+++ b/gnosis_vpn-ctl/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "gnosis-vpn-ctl"
+name = "gnosis_vpn-ctl"
 version = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-gnosis-vpn-lib = { workspace = true }
+gnosis_vpn-lib = { workspace = true }
 libp2p-identity = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
