enabled different libc builds for x86_64

--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -30,7 +30,9 @@ on:
       architecture:
         type: choice
         options:
-          - x86_64-linux
+          - x86_64-linux-libc-2-40
+          - x86_64-linux-libc-2-39
+          - x86_64-linux-libc-2-38
           - aarch64-linux
           - aarch64-darwin
           - x86_64-darwin
