--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,11 @@ jobs:
     strategy:
       matrix:
         binary:
-          - architecture: x86_64-linux
+          - architecture: x86_64-linux-libc-2-40
+            runner: self-hosted-hoprnet-big
+          - architecture: x86_64-linux-libc-2-39
+            runner: self-hosted-hoprnet-big
+          - architecture: x86_64-linux-libc-2-38
             runner: self-hosted-hoprnet-big
           - architecture: aarch64-linux
             runner: self-hosted-hoprnet-big
