--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,11 +19,7 @@ jobs:
     strategy:
       matrix:
         binary:
-          - architecture: x86_64-linux-libc-2-40
-            runner: self-hosted-hoprnet-big
-          - architecture: x86_64-linux-libc-2-39
-            runner: self-hosted-hoprnet-big
-          - architecture: x86_64-linux-libc-2-38
+          - architecture: x86_64-linux
             runner: self-hosted-hoprnet-big
           - architecture: aarch64-linux
             runner: self-hosted-hoprnet-big
@@ -78,7 +74,7 @@ jobs:
           tag_name: v${{ steps.environment.outputs.release_version }}
       - name: Publish binaries
         run: |
-          architectures=("aarch64-linux" "x86_64-linux-libc-2-40" "x86_64-linux-libc-2-39" "x86_64-linux-libc-2-38" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
+          architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
           mkdir -p binaries
           for architecture in "${architectures[@]}"; do
               gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis_vpn:${{ steps.environment.outputs.release_version }}:gnosis_vpn-${architecture} --destination=./binaries --local-filename=gnosis_vpn-${architecture}
