--- a/gnosis_vpn/Cargo.toml
+++ b/gnosis_vpn/Cargo.toml
@@ -19,6 +19,7 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+signal-hook = { workspace = true }
 toml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
