--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = { version = "1.0", features = ["backtrace"] }
 bincode = { version = "1.3" }
 clap = { version = "4.5", features = ["derive"] }
 crossbeam-channel = "0.5"
-ctrlc = "3.4"
+ctrlc = {version = "3.4", features = ["termination"]}
 directories = { version = "5.0" }
 exitcode = "1.1"
 exponential-backoff = "2.0"
